--- a/assets/css/modules/_nav.scss
+++ b/assets/css/modules/_nav.scss
@@ -29,5 +29,9 @@
     display: inline-block;
     padding: 5px;
     font-weight: 500;
+    transition: 250ms;
+    &.active {
+      opacity: 0.5;
+    }
   }
 }
