--- a/assets/css/modules/_article.scss
+++ b/assets/css/modules/_article.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 40vw;
   max-width: 350px;
-  transition: 600ms;
+  transition: top 600ms;
   &.erkennen {
     left: 12%;
     top: 76%;
