--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -11,11 +11,11 @@
 }
 @font-face {
     font-family: 'Signika';
-    src: url('../fonts/signika-bold-webfont.eot');
-    src: url('../fonts/signika-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/signika-bold-webfont.woff2') format('woff2'),
-         url('../fonts/signika-bold-webfont.woff') format('woff');
-    font-weight: 700;
+    src: url('../fonts/signika-light-webfont.eot');
+    src: url('../fonts/signika-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/signika-light-webfont.woff2') format('woff2'),
+         url('../fonts/signika-light-webfont.woff') format('woff');
+    font-weight: 300;
     font-style: normal;
 }
 @font-face {
@@ -24,7 +24,7 @@
     src: url('../fonts/signika-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/signika-regular-webfont.woff2') format('woff2'),
          url('../fonts/signika-regular-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
 @font-face {
@@ -34,6 +34,15 @@
          url('../fonts/signika-semibold-webfont.woff2') format('woff2'),
          url('../fonts/signika-semibold-webfont.woff') format('woff');
     font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Signika';
+    src: url('../fonts/signika-bold-webfont.eot');
+    src: url('../fonts/signika-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/signika-bold-webfont.woff2') format('woff2'),
+         url('../fonts/signika-bold-webfont.woff') format('woff');
+    font-weight: 700;
     font-style: normal;
 }
 
