--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -9,10 +9,10 @@
     margin-bottom: 0.3em;
     padding-bottom: 0em;
     display: inline-block;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-size: 1.5em;
-    font-weight: 700;
-    border-bottom: 3px solid $lightblue;
+    font-weight: 300;
+    border-bottom: 2px solid $lightblue;
     white-space: nowrap;
     span {
       display: inline-block;
