--- a/assets/css/modules/_border.scss
+++ b/assets/css/modules/_border.scss
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     top: 0;
-    background: url(../images/bg.jpg) center center no-repeat #006C80;
+    background: url(../images/bg.jpg) center center no-repeat #535852;
     background-size: cover;
   }
   .line {
