--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,16 +102,16 @@ img {
 
 @font-face {
   font-family: 'Signika';
-  src: url("../fonts/signika-bold-webfont.eot");
-  src: url("../fonts/signika-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signika-bold-webfont.woff2") format("woff2"), url("../fonts/signika-bold-webfont.woff") format("woff");
-  font-weight: 700;
+  src: url("../fonts/signika-light-webfont.eot");
+  src: url("../fonts/signika-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signika-light-webfont.woff2") format("woff2"), url("../fonts/signika-light-webfont.woff") format("woff");
+  font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: 'Signika';
   src: url("../fonts/signika-regular-webfont.eot");
   src: url("../fonts/signika-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signika-regular-webfont.woff2") format("woff2"), url("../fonts/signika-regular-webfont.woff") format("woff");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal; }
 
 @font-face {
@@ -119,6 +119,13 @@ img {
   src: url("../fonts/signika-semibold-webfont.eot");
   src: url("../fonts/signika-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signika-semibold-webfont.woff2") format("woff2"), url("../fonts/signika-semibold-webfont.woff") format("woff");
   font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Signika';
+  src: url("../fonts/signika-bold-webfont.eot");
+  src: url("../fonts/signika-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/signika-bold-webfont.woff2") format("woff2"), url("../fonts/signika-bold-webfont.woff") format("woff");
+  font-weight: 700;
   font-style: normal; }
 
 body {
@@ -160,13 +167,13 @@ a {
   0% {
     width: 0; }
   100% {
-    width: 139px; } }
+    width: 125px; } }
 
 @keyframes strechUp {
   0% {
     width: 0; }
   100% {
-    width: 139px; } }
+    width: 125px; } }
 
 @-webkit-keyframes moveUp {
   0% {
@@ -290,7 +297,7 @@ a {
   top: 0;
   bottom: 0;
   -webkit-transition: 600ms;
-          transition: 600ms; }
+  transition: 600ms; }
   .start .container {
     position: absolute;
     left: calc(38px + 260px);
@@ -320,7 +327,7 @@ a {
       -ms-flex-align: start;
           align-items: flex-start;
   -webkit-transition: 600ms;
-          transition: 600ms; }
+  transition: 600ms; }
   .vita article {
     margin: 0 10px;
     -webkit-box-flex: 1;
@@ -344,7 +351,7 @@ a {
     padding: 4px;
     background-color: white;
     -webkit-transition: 500ms;
-            transition: 500ms; }
+    transition: 500ms; }
     .vita aside img {
       width: 100%; }
   .vita.hidden {
@@ -369,7 +376,7 @@ a {
     right: 0;
     bottom: 0;
     top: 0;
-    background: url(../images/bg.jpg) center center no-repeat #006C80;
+    background: url(../images/bg.jpg) center center no-repeat #535852;
     background-size: cover; }
   .border .line {
     position: absolute;
@@ -431,10 +438,9 @@ a {
     margin-bottom: 0.3em;
     padding-bottom: 0em;
     display: inline-block;
-    text-transform: uppercase;
     font-size: 1.5em;
-    font-weight: 700;
-    border-bottom: 3px solid #ABC8D7;
+    font-weight: 300;
+    border-bottom: 2px solid #ABC8D7;
     white-space: nowrap; }
     .header h1 span {
       display: inline-block; }
@@ -457,7 +463,7 @@ a {
     width: 12px;
     height: 10px;
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
     .nav .hamburger div {
       margin-top: 2px;
       width: 12px;
@@ -466,7 +472,7 @@ a {
       content: '';
       background: white;
       -webkit-transition: 250ms;
-              transition: 250ms; }
+      transition: 250ms; }
     .nav .hamburger:focus div:nth-of-type(1), .nav .hamburger:hover div:nth-of-type(1) {
       -webkit-transform: scaleX(1) translate3d(-2.5px, 2px, 0) rotate(-45deg);
               transform: scaleX(1) translate3d(-2.5px, 2px, 0) rotate(-45deg); }
@@ -476,9 +482,9 @@ a {
   .nav a {
     display: inline-block;
     padding: 5px;
-    font-weight: 600;
+    font-weight: 400;
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
     .nav a.active {
       opacity: 0.5; }
 
@@ -489,16 +495,13 @@ a {
   width: 40vw;
   max-width: 350px;
   -webkit-transition: top 600ms;
-          transition: top 600ms; }
+  transition: top 600ms; }
   .article.erkennen {
     left: 12%;
     top: 76%; }
   .article.loesen {
     left: 60%;
     top: 10%; }
-    .article.loesen h1 {
-      -webkit-animation-delay: 4300ms;
-              animation-delay: 4300ms; }
   .article.innehalten {
     left: 42%;
     top: 47%; }
@@ -519,7 +522,7 @@ a {
     margin-left: -1.9em;
     padding-left: 1.9em;
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
   .article .circle {
     position: absolute;
     top: 4px;
@@ -529,7 +532,7 @@ a {
     border: 2px solid white;
     border-radius: 10px;
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
   .article .cross {
     position: absolute;
     top: 8.5px;
@@ -540,7 +543,7 @@ a {
         -ms-transform: scale(0);
             transform: scale(0);
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
     .article .cross div {
       position: absolute;
       width: 12px;
@@ -552,7 +555,7 @@ a {
           -ms-transform: rotate(45deg);
               transform: rotate(45deg);
       -webkit-transition: 250ms;
-              transition: 250ms; }
+      transition: 250ms; }
       .article .cross div:nth-of-type(2) {
         -webkit-transform: rotate(-45deg);
             -ms-transform: rotate(-45deg);
@@ -563,10 +566,10 @@ a {
     color: #2A2F29;
     background: white;
     -webkit-transition: 250ms;
-            transition: 250ms; }
+    transition: 250ms; }
   .article h1 {
     margin-bottom: 2px;
-    font-weight: 600; }
+    font-weight: 400; }
   .article .text {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -578,7 +581,7 @@ a {
         -ms-transform: scale(0.98);
             transform: scale(0.98);
     -webkit-transition: 250ms;
-            transition: 250ms;
+    transition: 250ms;
     -webkit-hyphens: auto;
        -moz-hyphens: auto;
         -ms-hyphens: auto;
