--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -89,6 +89,7 @@
           flex: 0 0 100%;
           img {
             margin: auto;
+            width: 100%;
             max-width: 100%;
             max-height: calc(100% - 2em);
           }
