--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,9 @@
 @import 'reset';
 @import 'fonts';
 
-$color: lighten(#555657,5);
-$lightblue: #abdfe0;
-$darkblue: #2579A4;
-$background: #7ca2a3;
+$color: #2e3d3f;
+$lightblue: #9dbcc1;
+$background: #4e7173;
 
 $duration: 200ms;
 $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
