--- a/assets/css/modules/_border.scss
+++ b/assets/css/modules/_border.scss
@@ -13,7 +13,7 @@
     right: 0;
     bottom: 0;
     top: 0;
-    background: url(../images/bg.jpg) center center no-repeat;
+    background: url(../images/bg.jpg) $background bottom center no-repeat;
     background-size: cover;
     transition: 250ms ease-out;
     transform: translateZ(0);
