--- a/assets/css/modules/_nav.scss
+++ b/assets/css/modules/_nav.scss
@@ -1,10 +1,11 @@
 .nav {
   position: absolute;
-  top: calc(37px + 28vh + 6px);
+  top: calc(24vh + 79px);
   float: left;
   z-index: 10;
   padding-left: 15px;
   font-weight: 400;
+  color: $lightblue;
   transition: $duration;
   .hamburger {
     width: 12px;
@@ -16,7 +17,7 @@
       height: 2px;
       display: block;
       content: '';
-      background: white;
+      background: $lightblue;
       // background: $color;
       transition: $duration;
     }
@@ -32,13 +33,12 @@
   a {
     display: inline-block;
     padding: 5px;
-    opacity: 0.5;
     transition: $duration;
     &:focus, &:hover {
-      opacity: 0.8;
+      color: mix($lightblue,white,60%);
     }
     &.active {
-      opacity: 1;
+      color: white;
     }
   }
 }
