--- a/assets/css/modules/_start--term.scss
+++ b/assets/css/modules/_start--term.scss
@@ -119,12 +119,14 @@
     z-index: 1;
     margin-bottom: 2px;
     font-weight: 400;
+    letter-spacing: 0.05em;
     transform: translateZ(0);
     span {
       z-index: 1;
       position: relative;
       display: inline-block;
-      line-height: 0.75;
+      margin-top: 1px;
+      // line-height: 0.75;
       transition: $duration;
       // text-shadow: 2px 0 0 white, -2px 0 0 white, 1px 0 0 white, -1px 0 0 white, 0 -1px 0 white;
       // &::after {
@@ -142,7 +144,7 @@
   .text {
     width: 40vw;
     max-width: 350px;
-    padding: 15px;
+    padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
     // filter: blur(2px);
@@ -196,6 +198,7 @@
       filter: blur(2.5px);
       transition-delay: $duration;
       &:focus, &:hover {
+        opacity: 1;
         filter: none;
         transition-delay: 0s;
       }
