--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -4,26 +4,28 @@
   left: 0;
   right: 0;
   height: calc(100vh - 74px);
+  box-sizing: border-box;
+  padding-top: 24vh;
   overflow: hidden;
   transform: translateZ(0);
   backface-visibility: hidden; // prevent flickering
   transition: $duration * 2 cubic-bezier(0.645, 0.045, 0.355, 1.000);
   &--gallery {
-    position: relative;
-    margin: calc(24vh - 42px) auto;
-    height: 70%;
-    width: 50%;
     &--nav {
+      position: absolute;
+      left: 22px;
+      top: calc(24vh + 40px * 6);
+      width: 40px;
       &--previous, &--next {
         position: absolute;
-        top: calc(50% - 4em - 20px);
+        // top: calc(50% - 4em - 20px);
         height: 40px;
-        width: 40px;
+        width: 20px;
         div {
           position: absolute;
           top: calc(50% - 1px);
           height: 2px;
-          width: 16px;
+          width: 10px;
           background-color: white;
           &:nth-of-type(3) {
             opacity: 0;
@@ -40,7 +42,7 @@
         }
       }
       &--previous {
-        left: -40px;
+        left: 0px;
         div {
           left: 0;
           &:nth-of-type(1) {
@@ -58,7 +60,7 @@
         }
       }
       &--next {
-        right: -40px;
+        right: 0;
         div {
           right: 0;
           &:nth-of-type(1) {
@@ -76,9 +78,27 @@
         }
       }
     }
+    &--captions {
+      position: absolute;
+      left: 20px;
+      top: calc(24vh + 40px * 7);
+      width: 240px;
+      overflow: hidden;
+      &--container {
+        display: flex;
+        transition: $duration*1.5 ease-out;
+        section {
+          width: 100%;
+          height: 100%;
+          flex: 0 0 100%;
+          line-height: 1.3;
+        }
+      }
+    }
     &--images {
-      width: 100%;
-      height: 100%;
+      position: relative;
+      margin: 0 auto;
+      width: 647 / 1372 * 100%;
       overflow: hidden;
       &--container {
         display: flex;
@@ -87,15 +107,12 @@
           width: 100%;
           height: 100%;
           flex: 0 0 100%;
+          overflow: hidden;
           img {
             margin: auto;
             width: 100%;
             max-width: 100%;
-            max-height: calc(100% - 2em);
-          }
-          figcaption {
-            margin-top: 0.5em;
-            text-align: center;
+            height: 100%;
           }
         }
       }
