--- a/assets/css/sites/_kontakt.scss
+++ b/assets/css/sites/_kontakt.scss
@@ -4,14 +4,13 @@
   left: 0;
   right: 0;
   height: calc(100vh - 74px);
-  display: flex;
   padding: 0 40px;
   transition: $duration * 2 cubic-bezier(0.645, 0.045, 0.355, 1.000);
   transform: translateZ(0);
   backface-visibility: hidden; // prevent flickering
   &--card {
     box-sizing: border-box;
-    margin: auto;
+    margin: calc(24vh + 40px * 3) auto;
     text-align: center;
     font-size: 1em;
     line-height: 1.3;
@@ -52,10 +51,10 @@
     z-index: -1;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: calc(24vh + 40px * 2);
     width: 200px;
     height: 200px;
-    transform: translate3d(-100px,-100px,0) rotate(45deg);
+    transform: translate3d(-100px,0,0) rotate(45deg);
     transition: $duration*2 $duration*1.5 $easeOutBack;
     backface-visibility: hidden; // prevent flickering
     perspective: 1000; // prevent flickering
@@ -102,7 +101,7 @@
     filter: blur(8px);
     transform: scale(0.98);
     .kontakt--square--container {
-      transform: translate3d(-100px,-100px,0) rotate(45deg) scale(0.92);
+      transform: translate3d(-100px,0,0) rotate(45deg) scale(0.92);
       transition-delay: 0s;
     }
     .kontakt--footer {
