--- a/assets/css/sites/_start.scss
+++ b/assets/css/sites/_start.scss
@@ -6,8 +6,8 @@
     position: absolute;
     left: 25vw;
     right: 30vw;
-    top: 12em;
-    bottom: 12em;
+    top: 13em;
+    bottom: 11em;
   }
   &[hidden] {
     opacity: 0.1;
@@ -20,7 +20,7 @@
     }
   }
 }
-#vita--drawing {
+#start--drawing {
   z-index: -1;
   position: absolute;
   left: -40px;
