--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,19 +195,23 @@ body {
   color: white;
   box-sizing: border-box;
   min-height: 100vh;
-  padding: 38px;
-  font-size: 14px; }
+  padding: 34px;
+  font-size: 15px; }
 
 a {
   text-decoration: none;
   color: inherit; }
+  a:active {
+    opacity: 0.7;
+    -webkit-transition-duration: 0s !important;
+            transition-duration: 0s !important; }
 
 .main {
   position: absolute;
-  left: 37px;
-  right: 37px;
-  bottom: 37px;
-  top: 37px;
+  left: 34px;
+  right: 34px;
+  bottom: 34px;
+  top: 34px;
   overflow: hidden; }
   .main .scroll-container {
     position: relative;
@@ -392,24 +396,24 @@ a {
     position: absolute;
     background: white; }
     .border .line.t {
-      left: 33px;
-      right: 33px;
-      top: 20px;
+      left: 30px;
+      right: 30px;
+      top: 17px;
       height: 1px; }
     .border .line.r {
-      top: 33px;
-      bottom: 33px;
-      right: 20px;
+      top: 30px;
+      bottom: 30px;
+      right: 17px;
       width: 1px; }
     .border .line.b {
-      left: 33px;
-      right: 33px;
-      bottom: 20px;
+      left: 30px;
+      right: 30px;
+      bottom: 17px;
       height: 1px; }
     .border .line.l {
-      top: 33px;
-      bottom: 33px;
-      left: 20px;
+      top: 30px;
+      bottom: 30px;
+      left: 17px;
       width: 1px; }
   .border .circle {
     position: absolute;
@@ -418,23 +422,23 @@ a {
     border: 1px solid white;
     border-radius: 10px; }
     .border .circle.tl {
-      left: 16px;
-      top: 16px; }
+      left: 13px;
+      top: 13px; }
     .border .circle.tr {
-      right: 16px;
-      top: 16px; }
+      right: 13px;
+      top: 13px; }
     .border .circle.br {
-      right: 16px;
-      bottom: 16px; }
+      right: 13px;
+      bottom: 13px; }
     .border .circle.bl {
-      left: 16px;
-      bottom: 16px; }
+      left: 13px;
+      bottom: 13px; }
   .border .inner {
     position: absolute;
-    top: 33px;
-    right: 33px;
-    bottom: 33px;
-    left: 33px;
+    top: 30px;
+    right: 30px;
+    bottom: 30px;
+    left: 30px;
     border: 4px solid white; }
 
 .header {
@@ -447,14 +451,13 @@ a {
     position: relative;
     overflow: hidden;
     margin-bottom: 0.3em;
-    padding: 0 0;
+    padding: 0;
     display: inline-block;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.6em;
     font-weight: 400;
     line-height: 0.9;
-    letter-spacing: 0.02em;
-    border-bottom: 2px solid #9dbcc1;
+    border-bottom: 2px solid #a1cad2;
     white-space: nowrap;
     -webkit-transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275), color 400ms cubic-bezier(0.645, 0.045, 0.355, 1), border-color 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275), color 400ms cubic-bezier(0.645, 0.045, 0.355, 1), border-color 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
@@ -467,9 +470,9 @@ a {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     text-transform: lowercase;
-    letter-spacing: 0.15em;
-    font-size: 0.9em;
-    color: #9dbcc1; }
+    letter-spacing: 0.13em;
+    font-size: 0.95em;
+    color: #a1cad2; }
   .header h2 span {
     -webkit-transition: color 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: color 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
@@ -494,7 +497,7 @@ a {
       .header h2 a:focus::after, .header h2 a:hover::after, .header h2 a.active::after {
         left: 0.5px;
         right: 2.5px;
-        border-bottom-color: #9dbcc1; }
+        border-bottom-color: #a1cad2; }
 
 .negative .header h1 {
   color: #2e3d3f;
@@ -510,11 +513,12 @@ a {
 
 .nav {
   position: absolute;
-  top: calc(37px + 28vh + 6px);
+  top: calc(24vh + 79px);
   float: left;
   z-index: 10;
   padding-left: 15px;
   font-weight: 400;
+  color: #a1cad2;
   -webkit-transition: 200ms;
   transition: 200ms; }
   .nav .hamburger {
@@ -528,7 +532,7 @@ a {
       height: 2px;
       display: block;
       content: '';
-      background: white;
+      background: #a1cad2;
       -webkit-transition: 200ms;
       transition: 200ms; }
     .nav .hamburger:focus div:nth-of-type(1), .nav .hamburger:hover div:nth-of-type(1) {
@@ -542,13 +546,12 @@ a {
   .nav a {
     display: inline-block;
     padding: 5px;
-    opacity: 0.5;
     -webkit-transition: 200ms;
     transition: 200ms; }
     .nav a:focus, .nav a:hover {
-      opacity: 0.8; }
+      color: #c7dfe4; }
     .nav a.active {
-      opacity: 1; }
+      color: white; }
 
 .start--term {
   position: absolute;
@@ -666,19 +669,20 @@ a {
     z-index: 1;
     margin-bottom: 2px;
     font-weight: 400;
+    letter-spacing: 0.05em;
     -webkit-transform: translateZ(0);
             transform: translateZ(0); }
     .start--term h1 span {
       z-index: 1;
       position: relative;
       display: inline-block;
-      line-height: 0.75;
+      margin-top: 1px;
       -webkit-transition: 200ms;
       transition: 200ms; }
   .start--term .text {
     width: 40vw;
     max-width: 350px;
-    padding: 15px;
+    padding: 13px 15px;
     line-height: 1.3;
     opacity: 0;
     -webkit-transform: translateY(-22px) translateZ(0);
@@ -728,6 +732,7 @@ a {
     -webkit-transition-delay: 200ms;
             transition-delay: 200ms; }
     .start--term.inactive a:focus, .start--term.inactive a:hover {
+      opacity: 1;
       -webkit-filter: none;
               filter: none;
       -webkit-transition-delay: 0s;
@@ -742,10 +747,9 @@ a {
   bottom: 0; }
   .window--container {
     box-sizing: border-box;
-    margin: calc(24vh - 42px) auto;
+    margin: calc(24vh - 40px) auto;
     color: #2e3d3f;
-    width: 50%;
-    max-width: 560px;
+    width: 42.055393586%;
     padding: 40px;
     line-height: 1.3;
     -webkit-hyphens: auto;
@@ -765,7 +769,7 @@ a {
       width: 75%;
       text-decoration: underline;
       letter-spacing: 0.1em;
-      color: #9dbcc1;
+      color: #a1cad2;
       font-weight: 600;
       font-style: normal; }
       .window--container blockquote em {
@@ -798,8 +802,8 @@ a {
     position: absolute;
     left: 25vw;
     right: 30vw;
-    top: 12em;
-    bottom: 12em; }
+    top: 13em;
+    bottom: 11em; }
   .start[hidden] {
     opacity: 0.1;
     -webkit-filter: blur(8px);
@@ -814,7 +818,7 @@ a {
     .start[hidden] .article {
       top: 0%; }
 
-#vita--drawing {
+#start--drawing {
   z-index: -1;
   position: absolute;
   left: -40px;
@@ -825,13 +829,13 @@ a {
           backface-visibility: hidden;
   -webkit-perspective: 1000;
           perspective: 1000; }
-  #vita--drawing svg {
+  #start--drawing svg {
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
     -webkit-perspective: 1000;
             perspective: 1000; }
-    #vita--drawing svg line {
-      stroke: #9dbcc1;
+    #start--drawing svg line {
+      stroke: #a1cad2;
       stroke-width: 0.5; }
 
 .vita {
@@ -841,19 +845,7 @@ a {
   right: 0;
   height: calc(100vh - 74px);
   box-sizing: border-box;
-  padding: 24vh 120px 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  padding: 24vh 18.1486880466% 0;
   -webkit-transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   overflow: hidden;
@@ -862,41 +854,30 @@ a {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden; }
   .vita--textbox {
+    float: left;
     box-sizing: border-box;
-    margin: 0 10px;
-    max-width: 480px;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 50%;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-    margin-left: 5%;
+    width: 60.8%;
     padding: 40px;
-    color: #2e3d3f;
-    line-height: 1.3;
-    background-color: white;
-    -webkit-hyphens: auto;
-       -moz-hyphens: auto;
-        -ms-hyphens: auto;
-            hyphens: auto; }
+    color: white;
+    line-height: 1.4;
+    background: url(../images/corner_tl.svg) top left, url(../images/corner_tr.svg) top right, url(../images/corner_br.svg) bottom right, url(../images/corner_bl.svg) bottom left;
+    background-color: rgba(161, 202, 210, 0.1);
+    background-repeat: no-repeat; }
     .vita--textbox p {
       margin-bottom: 0.65em; }
       .vita--textbox p:last-of-type {
         margin-bottom: 0; }
   .vita--image {
+    float: right;
+    margin-top: 40px;
+    width: 34.6285714286%;
     position: relative;
-    box-sizing: border-box;
-    margin: 0 10px;
-    max-width: 320px;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 30%;
-        -ms-flex: 0 1 30%;
-            flex: 0 1 30%;
-    padding: 4px;
-    background-color: white; }
+    -webkit-transition: 200ms 200ms;
+    transition: 200ms 200ms; }
     .vita--image img {
       width: 100%;
-      -webkit-transition: 200ms;
-      transition: 200ms; }
+      -webkit-transition: 200ms 200ms;
+      transition: 200ms 200ms; }
       .vita--image img:nth-of-type(n+2) {
         position: absolute;
         top: 4px;
@@ -914,6 +895,15 @@ a {
             transform: scale(0.99);
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden; }
+    .vita[hidden] .vita--image {
+      -webkit-transition-delay: 0s;
+              transition-delay: 0s; }
+      .vita[hidden] .vita--image img {
+        -webkit-transform: scale(0.95);
+            -ms-transform: scale(0.95);
+                transform: scale(0.95);
+        -webkit-transition-delay: 0s;
+                transition-delay: 0s; }
 
 .arbeitsweise {
   position: absolute;
@@ -921,6 +911,8 @@ a {
   left: 0;
   right: 0;
   height: calc(100vh - 74px);
+  box-sizing: border-box;
+  padding-top: 24vh;
   overflow: hidden;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -928,21 +920,20 @@ a {
           backface-visibility: hidden;
   -webkit-transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
-  .arbeitsweise--gallery {
-    position: relative;
-    margin: calc(24vh - 42px) auto;
-    height: 70%;
-    width: 50%; }
+  .arbeitsweise--gallery--nav {
+    position: absolute;
+    left: 22px;
+    top: calc(24vh + 40px * 6);
+    width: 40px; }
     .arbeitsweise--gallery--nav--previous, .arbeitsweise--gallery--nav--next {
       position: absolute;
-      top: calc(50% - 4em - 20px);
       height: 40px;
-      width: 40px; }
+      width: 20px; }
       .arbeitsweise--gallery--nav--previous div, .arbeitsweise--gallery--nav--next div {
         position: absolute;
         top: calc(50% - 1px);
         height: 2px;
-        width: 16px;
+        width: 10px;
         background-color: white; }
         .arbeitsweise--gallery--nav--previous div:nth-of-type(3), .arbeitsweise--gallery--nav--next div:nth-of-type(3) {
           opacity: 0;
@@ -953,7 +944,7 @@ a {
         -webkit-transform: translate3d(0, 0, 0);
                 transform: translate3d(0, 0, 0); }
     .arbeitsweise--gallery--nav--previous {
-      left: -40px; }
+      left: 0px; }
       .arbeitsweise--gallery--nav--previous div {
         left: 0; }
         .arbeitsweise--gallery--nav--previous div:nth-of-type(1) {
@@ -973,7 +964,7 @@ a {
           -webkit-transform: translate3d(20%, 0, 0);
                   transform: translate3d(20%, 0, 0); }
     .arbeitsweise--gallery--nav--next {
-      right: -40px; }
+      right: 0; }
       .arbeitsweise--gallery--nav--next div {
         right: 0; }
         .arbeitsweise--gallery--nav--next div:nth-of-type(1) {
@@ -992,32 +983,52 @@ a {
           right: 8px;
           -webkit-transform: translate3d(-20%, 0, 0);
                   transform: translate3d(-20%, 0, 0); }
-    .arbeitsweise--gallery--images {
-      width: 100%;
-      height: 100%;
-      overflow: hidden; }
-      .arbeitsweise--gallery--images--container {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-transition: 300ms ease-out;
-        transition: 300ms ease-out; }
-        .arbeitsweise--gallery--images--container figure {
+  .arbeitsweise--gallery--captions {
+    position: absolute;
+    left: 20px;
+    top: calc(24vh + 40px * 7);
+    width: 240px;
+    overflow: hidden; }
+    .arbeitsweise--gallery--captions--container {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-transition: 300ms ease-out;
+      transition: 300ms ease-out; }
+      .arbeitsweise--gallery--captions--container section {
+        width: 100%;
+        height: 100%;
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 100%;
+            -ms-flex: 0 0 100%;
+                flex: 0 0 100%;
+        line-height: 1.3; }
+  .arbeitsweise--gallery--images {
+    position: relative;
+    margin: 0 auto;
+    width: 47.1574344023%;
+    overflow: hidden; }
+    .arbeitsweise--gallery--images--container {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-transition: 300ms ease-out;
+      transition: 300ms ease-out; }
+      .arbeitsweise--gallery--images--container figure {
+        width: 100%;
+        height: 100%;
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 100%;
+            -ms-flex: 0 0 100%;
+                flex: 0 0 100%;
+        overflow: hidden; }
+        .arbeitsweise--gallery--images--container figure img {
+          margin: auto;
           width: 100%;
-          height: 100%;
-          -webkit-box-flex: 0;
-          -webkit-flex: 0 0 100%;
-              -ms-flex: 0 0 100%;
-                  flex: 0 0 100%; }
-          .arbeitsweise--gallery--images--container figure img {
-            margin: auto;
-            width: 100%;
-            max-width: 100%;
-            max-height: calc(100% - 2em); }
-          .arbeitsweise--gallery--images--container figure figcaption {
-            margin-top: 0.5em;
-            text-align: center; }
+          max-width: 100%;
+          height: 100%; }
   .arbeitsweise[hidden] {
     opacity: 0.1;
     -webkit-filter: blur(8px);
@@ -1034,10 +1045,6 @@ a {
   left: 0;
   right: 0;
   height: calc(100vh - 74px);
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   padding: 0 40px;
   -webkit-transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -1047,7 +1054,7 @@ a {
           backface-visibility: hidden; }
   .kontakt--card {
     box-sizing: border-box;
-    margin: auto;
+    margin: calc(24vh + 40px * 3) auto;
     text-align: center;
     font-size: 1em;
     line-height: 1.3; }
@@ -1059,7 +1066,7 @@ a {
       position: relative;
       display: inline-block;
       line-height: 0.9;
-      color: #9dbcc1;
+      color: #a1cad2;
       -webkit-transition: 200ms, text-shadow 0s 200ms;
       transition: 200ms, text-shadow 0s 200ms; }
       .kontakt--card a::after {
@@ -1077,18 +1084,18 @@ a {
                 transition-delay: 0s;
         text-shadow: 2px 0 0 #4e7173, -2px 0 0 #4e7173, 1px 0 0 #4e7173, -1px 0 0 #4e7173, 0 1px 0 #4e7173; }
         .kontakt--card a:focus::after, .kontakt--card a:hover::after, .kontakt--card a.active::after {
-          border-bottom-color: #9dbcc1;
+          border-bottom-color: #a1cad2;
           left: 0.5px;
           right: 0.5px; }
   .kontakt--square--container {
     z-index: -1;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: calc(24vh + 40px * 2);
     width: 200px;
     height: 200px;
-    -webkit-transform: translate3d(-100px, -100px, 0) rotate(45deg);
-            transform: translate3d(-100px, -100px, 0) rotate(45deg);
+    -webkit-transform: translate3d(-100px, 0, 0) rotate(45deg);
+            transform: translate3d(-100px, 0, 0) rotate(45deg);
     -webkit-transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     -webkit-backface-visibility: hidden;
@@ -1139,8 +1146,8 @@ a {
         -ms-transform: scale(0.98);
             transform: scale(0.98); }
     .kontakt[hidden] .kontakt--square--container {
-      -webkit-transform: translate3d(-100px, -100px, 0) rotate(45deg) scale(0.92);
-              transform: translate3d(-100px, -100px, 0) rotate(45deg) scale(0.92);
+      -webkit-transform: translate3d(-100px, 0, 0) rotate(45deg) scale(0.92);
+              transform: translate3d(-100px, 0, 0) rotate(45deg) scale(0.92);
       -webkit-transition-delay: 0s;
               transition-delay: 0s; }
     .kontakt[hidden] .kontakt--footer {
@@ -1152,4 +1159,3 @@ a {
               transform: scale(0.99);
       -webkit-transition-delay: 0s;
               transition-delay: 0s; }
-/*# sourceMappingURL=style.css.map */
