--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -27,9 +27,15 @@
           height: 2px;
           width: 10px;
           background-color: white;
+          transition: $duration;
           &:nth-of-type(3) {
             opacity: 0;
             transition: $duration $easeOutBack;
+          }
+        }
+        &.inactive {
+          div {
+            background-color: $lightblue;
           }
         }
         &:focus, &:hover {
@@ -100,6 +106,28 @@
       margin: 0 auto;
       width: 647 / 1372 * 100%;
       overflow: hidden;
+      &--alternative-nav {
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        &--previous, &--next {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          width: 33.333333%;
+        }
+        &--previous {
+          left: 0;
+          cursor: w-resize;
+        }
+        &--next {
+          right: 0;
+          cursor: e-resize;
+        }
+      }
       &--container {
         display: flex;
         transition: $duration*1.5 ease-out;
