Small animation fixes

--- a/assets/css/sites/_arbeitsweise.scss
+++ b/assets/css/sites/_arbeitsweise.scss
@@ -102,11 +102,11 @@
       }
     }
     &--images {
-      transition: $duration $duration;
       position: relative;
       margin: 0 auto;
       width: 647 / 1372 * 100%;
       overflow: hidden;
+      transition: $duration*2 $duration*1.5 $easeOutBack;
       &--alternative-nav {
         z-index: 1;
         position: absolute;
@@ -154,7 +154,7 @@
     backface-visibility: hidden; // prevent flickering
     .arbeitsweise--gallery {
       &--images {
-        transform: scale(0.95);
+        transform: scale(0.97);
         transition-delay: 0s;
       }
     }
