--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -872,20 +872,10 @@ a {
     margin-top: 40px;
     width: 34.6285714286%;
     position: relative;
-    -webkit-transition: 200ms 200ms;
-    transition: 200ms 200ms; }
+    -webkit-transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275); }
     .vita--image img {
-      width: 100%;
-      -webkit-transition: 200ms 200ms;
-      transition: 200ms 200ms; }
-      .vita--image img:nth-of-type(n+2) {
-        position: absolute;
-        top: 4px;
-        right: 4px;
-        left: 4px;
-        width: calc(100% - 8px); }
-        .vita--image img:nth-of-type(n+2)[hidden] {
-          opacity: 0; }
+      width: 100%; }
   .vita[hidden] {
     opacity: 0.1;
     -webkit-filter: blur(8px);
@@ -896,14 +886,11 @@ a {
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden; }
     .vita[hidden] .vita--image {
+      -webkit-transform: scale(0.95);
+          -ms-transform: scale(0.95);
+              transform: scale(0.95);
       -webkit-transition-delay: 0s;
               transition-delay: 0s; }
-      .vita[hidden] .vita--image img {
-        -webkit-transform: scale(0.95);
-            -ms-transform: scale(0.95);
-                transform: scale(0.95);
-        -webkit-transition-delay: 0s;
-                transition-delay: 0s; }
 
 .arbeitsweise {
   position: absolute;
@@ -1009,12 +996,12 @@ a {
                 flex: 0 0 100%;
         line-height: 1.3; }
   .arbeitsweise--gallery--images {
-    -webkit-transition: 200ms 200ms;
-    transition: 200ms 200ms;
     position: relative;
     margin: 0 auto;
     width: 47.1574344023%;
-    overflow: hidden; }
+    overflow: hidden;
+    -webkit-transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: 400ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275); }
     .arbeitsweise--gallery--images--alternative-nav {
       z-index: 1;
       position: absolute;
@@ -1063,9 +1050,9 @@ a {
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden; }
     .arbeitsweise[hidden] .arbeitsweise--gallery--images {
-      -webkit-transform: scale(0.95);
-          -ms-transform: scale(0.95);
-              transform: scale(0.95);
+      -webkit-transform: scale(0.97);
+          -ms-transform: scale(0.97);
+              transform: scale(0.97);
       -webkit-transition-delay: 0s;
               transition-delay: 0s; }
 
